syntax = "proto3";

package io.iohk.prism.protos;

import "cstore_models.proto";

service CredentialsStoreService {

  rpc CreateIndividual (CreateIndividualRequest) returns (CreateIndividualResponse) {}
  rpc GetIndividuals (GetIndividualsRequest) returns (GetIndividualsResponse) {}
  rpc GenerateConnectionTokenFor(GenerateConnectionTokenForRequest) returns (GenerateConnectionTokenForResponse) {}
  rpc StoreCredential (StoreCredentialRequest) returns (StoreCredentialResponse) {}
  rpc GetStoredCredentialsFor (GetStoredCredentialsForRequest) returns (GetStoredCredentialsForResponse) {}

  // Generic versions
  rpc CreateHolder (CreateHolderRequest) returns (CreateHolderResponse) {}
  rpc GetHolders (GetHoldersRequest) returns (GetHoldersResponse) {}
}

message CreateIndividualRequest {
  string fullName = 1;
  string email = 2;
}

message CreateIndividualResponse {
  Individual individual = 1;
}

message GenerateConnectionTokenForRequest {
  // TODO: Rename to `holderId` after removing legacy methods
  string individualId = 1;
}

message GetIndividualsRequest {
  int32 limit = 1;
  string lastSeenIndividualId = 2;
}

message GetIndividualsResponse {
  repeated Individual individuals = 1;
}

message GenerateConnectionTokenForResponse {
  string token = 1;
}

message StoreCredentialRequest {
  string individualId = 1;
  string issuerDid = 2;
  string proofId = 3;
  bytes content = 4;
  bytes signature = 5;
}

message StoreCredentialResponse {
}

message GetStoredCredentialsForRequest {
  // TODO: Rename to `holderId` after removing legacy methods
  string individualId = 1;
}

message GetStoredCredentialsForResponse {
  repeated SignedCredential credentials = 1;
}

// Generic versions
message CreateHolderRequest {
  string jsonData = 1;
}

message CreateHolderResponse {
  VerifierHolder holder = 1;
}

message GetHoldersRequest {
  int32 limit = 1;
  string lastSeenHolderId = 2;
}

message GetHoldersResponse {
  repeated VerifierHolder holders = 1;
}